<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="mpip.finki.ukim.mk.lab01.MainActivity"
    android:orientation="vertical"
    android:layout_marginTop="100dp">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:id="@+id/main_activity_text_view"
        android:text="@string/app_name"
        android:layout_marginBottom="20dp"
        android:textSize="20dp"
        android:textColor="@color/colorAccent"/>

    <Button
        android:id="@+id/main_activity_button_text"
        style="@android:style/Widget.Button"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:text="@string/button_text"/>

    <Button
        android:id="@+id/main_activity_button_activities"
        style="@android:style/Widget.Button"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:text="@string/button_activities"/>

    <Button
        android:id="@+id/main_activity_button_share"
        style="@android:style/Widget.Button"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:text="@string/button_share"/>

    <Button
        android:id="@+id/main_activity_button_pick"
        style="@android:style/Widget.Button"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:text="@string/button_pick"/>


</LinearLayout>
